--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^6.2.0",
     "remark-breaks": "^3.0.1",
     "remark-gfm": "^2.0.0",
     "typescript": "^4.4.3",
